peachjam/static/stylesheets/components/_document-content.scss
.document-content {
  .content {
    // so that gutter items can position relative to this
    position: relative;
    padding-left: 0.75rem;
  }

  .content.content__html {
    // reset line height to a reasonable default for text documents, rather than bootstrap's adjusted line height
    line-height: 1.3;
    font-size: 15px;

    // style embedded la-akoma-ntoso content
    la-akoma-ntoso {
      max-height: 60vh;
      overflow-y: auto;
      border: 1px solid $gray-500;
      background-color: $gray-100;
      padding: $spacer;
      margin-bottom: $spacer;
    }

    &.frbr-subtype-book {
      line-height: 1.4;

      // reduce headers to match content body font size
      h1 {
        font-size: 1rem * 1.75;
        border-bottom: 1px solid;
        border-left: 10px solid;
        padding-left: 1rem;
      }

      h2 {
        font-size: 1rem * 1.5;
        border-bottom: 1px solid;
      }

      h3 {
        font-size: 1rem * 1.3;
      }

      h4 {
        font-size: 1rem * 1;
      }

      h5 {
        font-size: 1rem * 1;
      }

      h6 {
        font-size: 1rem * 1;
      }

      h1, h2 {
        margin-top: 2rem;
        margin-bottom: 1.5rem;
      }

      h3, h4, h5 {
        margin-top: 1.5rem;
        margin-bottom: 1rem;
      }

      li {
        margin-bottom: 0.5rem;
      }

      li > p:last-child {
        margin-bottom: 0px;
      }

      blockquote {
        padding: $spacer;
        margin-bottom: 1rem; // must much bottom margin of p tags
        background-color: $gray-200;

        & > p:last-child {
          margin-bottom: 0px;
        }
      }

      table {
        width: 100%;
        margin-bottom: 1rem;
        border-color: var(--bs-border-color);

        th, td {
          border-width: 1px;
          padding: 0.5rem 0.5rem;
        }

        th {
          background-color: $gray-100;
        }
      }

      details {
        border: 1px solid var(--bs-border-color);
        padding: $spacer;
        margin-bottom: $spacer;

        &:has(+ details) {
          margin-bottom: 0;
        }

        &[open] summary {
          margin-bottom: $spacer;
        }
      }

      details + details {
        border-top: none;
      }

      .nav {
        border: 1px solid var(--bs-border-color);
        border-bottom: none;
        background-color: $gray-100;
      }

      .nav + .tab-content {
        border: 1px solid var(--bs-border-color);
        border-top: none;
        padding: $spacer $spacer 0 $spacer;
        margin-bottom: $spacer;
      }

      .alert > *:first-child {
        padding-top: 0px;
        margin-top: 0px;
      }

      .alert > *:last-child {
        padding-bottom: 0px;
        margin-bottom: 0px;
      }
    }

    /* if this changes, also change it in CoreDocument.prepare_content_html_for_pdf */
    #pj-anonymisation-notice {
      text-align: center;
      color: red;
      margin-bottom: 1em;
    }
  }

  .navigation {
    position: sticky;
    top: $floating-header-height;
    left: 0;
    height: calc(100vh - $floating-header-height);
    border-right: 1px solid $gray-200;
    padding: 0;
  }

  .document-content__inner {
    display: flex;

    .navigation {
      display: none;

      @include media-breakpoint-up(lg) {
        display: block;
        flex: 0 0 auto;
        width: 25%;
      }
    }

    .content-and-enrichments {
      flex: 0 0 auto;
      width: 100%;

      @include media-breakpoint-up(lg) {
        width: 75%;
      }

      @include media-breakpoint-down(lg) {
        // allow the gutter to use the full right width on small screens
        padding-right: 0px;
      }
    }
  }

  .navigation__inner {
    display: flex;
    height: 100%;
    flex-direction: column;

    nav {
      padding-top: 1rem;
      padding-left: 1rem;
      padding-right: 1rem;
      border-bottom: 2px solid $gray-200;
    }

    .search__clear-btn {
      width: 35px;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }

    .tab-content {
      flex: 1 1 auto;
      min-height: 0px;
      background-color: $gray-100;

      .tab-pane {
        height: 100%;
        overflow-y: auto;
      }

      .toc {
        height: 100%;
      }
    }
  }

  .content-and-enrichments__inner {
    max-width: 70em;
    margin-left: auto;
    margin-right: auto;

    * {
      scroll-margin-top: $floating-header-height + 1rem;
    }

    &.la-akoma-ntoso-with-gutter {
      .content {
        flex: 80%;
        max-width: 80%;

        @include media-breakpoint-down(lg) {
          flex: 100%;
          max-width: 100%;
          padding-right: 0px;
        }
      }

      la-gutter {
        flex: 0 0 45px;

        @include media-breakpoint-up(lg) {
          flex: 20%;
        }

        @include media-breakpoint-down(lg) {
          padding: 0px;

          > la-gutter-item,
          > la-gutter-item[active] {
            left: 0px;
          }
        }
      }
    }
  }

  .pdf-previews {
    padding-bottom: 10rem;
    @include media-breakpoint-up(lg) {
      padding-bottom: 5rem;
    }
  }

  .preview-panel {
    border: none;
    max-width: 200px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-top: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
    background-color: transparent;

    img {
      @extend .mb-2;
      width: 100%;
      height: auto;
    }

    &.active {
      background-color: $gray-200;
    }
  }

  .preview-panel__page-number {
    display: block;
    text-align: center;
  }

  .pdf-content {
    .textLayer a {
      background: white;
    }

    .textLayer {
      position: absolute;
      text-align: initial;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
      overflow: hidden;
      line-height: 1;
    }

    .textLayer span,
    .textLayer br {
      color: transparent;
      position: absolute;
      white-space: pre;
      cursor: text;
      transform-origin: 0% 0%;
    }

    .textLayer mark {
      transform-origin: 0% 0%;
      white-space: pre;
      cursor: text;
    }

    .textLayer .highlight {
      margin: -1px;
      padding: 1px;
      background-color: rgba(180, 0, 170, 1);
      border-radius: 4px;
    }

    .textLayer .highlight.appended {
      position: initial;
    }

    .textLayer .highlight.begin {
      border-radius: 4px 0 0 4px;
    }

    .textLayer .highlight.end {
      border-radius: 0 4px 4px 0;
    }

    .textLayer .highlight.middle {
      border-radius: 0;
    }

    .textLayer .highlight.selected {
      background-color: rgba(0, 100, 0, 1);
    }

    /* Avoids https://github.com/mozilla/pdf.js/issues/13840 in Chrome */
    .textLayer br::-moz-selection {
      background: transparent;
    }

    .textLayer br::selection {
      background: transparent;
    }

    .textLayer .endOfContent {
      display: block;
      position: absolute;
      left: 0;
      top: 100%;
      right: 0;
      bottom: 0;
      z-index: -1;
      cursor: default;
      -webkit-user-select: none;
      -moz-user-select: none;
      user-select: none;
    }

    .textLayer .endOfContent.active {
      top: 0;
    }

    .pdfPresentationMode:-webkit-full-screen .textLayer span {
      cursor: none;
    }

    .pdfPresentationMode:fullscreen .textLayer span {
      cursor: none;
    }

    .pdfPresentationMode.pdfPresentationModeControls > *,
    .pdfPresentationMode.pdfPresentationModeControls .textLayer span {
      cursor: default;
    }
  }

  .pdf-content__page {
    @extend .shadow-sm;
    @extend .mb-4;
  }

  .pdf-loading,
  .pdf-error {
    display: none;
  }

  &[data-pdf-standby], &[data-pdf-loading], &[data-pdf-error] {
    .navigation {
      opacity: 0;
    }

    .pdf-content {
      display: none;
    }
  }

  &[data-pdf-standby] {
    .pdf-loading {
      display: none;
    }
  }

  &[data-pdf-loading] {
    .pdf-loading {
      display: block;
    }
  }

  &[data-pdf-error] {
    .pdf-error {
      display: block;
    }
  }

  .pdf-large-prompt {
    text-align: center;
    display: none;
  }

  &[data-large-pdf] {
    .pdf-large-prompt {
      display: block;
    }
  }

}
.document-metadata-list {
  --dt-width: 100px;

  @media (min-width: 425px) {
    --dt-width: 150px;
  }

  margin-bottom: 0px;
  flex-wrap: wrap;

  dt {
    width: var(--dt-width);
    flex: 0 0 var(--dt-width);
  }
  dd {
    padding-left: 0.5rem;
    flex: 0 0 calc(100% - var(--dt-width));
  }

  .btn.copy-to-clipboard {
    @include button-size(0.125rem, 0.25rem, $btn-font-size-sm, $btn-border-radius-sm);
    margin-left: map-get($spacers, 2);
  }
}

.to-the-top {
  position: fixed;
  right: 10px;
  bottom: 10px;
  z-index: 10;
}

// give remarks a background colour
la-akoma-ntoso .akn-remark {
  background-color: var(--bs-primary-bg-subtle);
}

// except in jurisdictions where they are already styled differently
la-akoma-ntoso[frbr-country="na"] .akn-remark {
  background-color: inherit;
}

.document-floating-header {
  --floating-header-height: #{$floating-header-height};

  @include media-breakpoint-down(md) {
    --floating-header-height: #{$floating-header-height-md};
  }

  position: fixed;
  top: 0px;
  right: 0px;
  left: 0px;
  height: var(--floating-header-height);
  display: none;
  box-shadow: 0 4px 4px rgb(0, 0, 0, 0.2);
  z-index: 100;

  &.visible {
    display: flex;
  }

  .menu-toggle {
    display: block;
    background-color: $primary;
    color: color-contrast($primary);
    width: var(--floating-header-height);
    min-width: var(--floating-header-height);
    text-align: center;
    align-content: center;
    font-size: 1.5rem;
  }

  .title {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    @include media-breakpoint-down(lg) {
      @include font-size($h6-font-size);
    }
  }

  button {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    @include media-breakpoint-down(md) {
      max-width: 5rem;
    }
  }

  @include media-breakpoint-down(lg) {
    .btn.copy-to-clipboard {
      display: none;
    }
  }
}

.offcanvas .navigation__inner {
  margin-top: 0px;
}

.la-akoma-ntoso-with-gutter la-gutter {
  background-color: transparent !important;
}

